# go2_minimal_ros2

./: README.md
go2_interfaces/: CMakeLists.txt  package.xml
go2_robot/: package.xml  setup.cfg  setup.py
go2_robot/launch/: robot.launch.py  webrtc_web.launch.py
go2_robot/urdf/: go2.urdf
